# Auto-VTNA

./: Auto-VTNA user manual v1.docx  README.md
All VTNA datasets used for Auto-VTNA publication/: Datafiles input Auto-VTNA.docx  Figure 11 kinetic data.xlsx  Figure 3 simulated data from figure 3 in Bures 2016 VTNA paper.xlsx  Figure 5b - simulated data from figure 2 in Bures 2016 VTNA paper.xlsx  Table 1 DMSO.xlsx  Table 1 EtOH.xlsx  Table 1 IPA.xlsx  Table 1 THF.xlsx  Table 2 Entry 1 Intermolecular Catalytic Asymmetric Alkene Bromoesterification.xlsx  Table 2 Entry 10 Reductive Cleavage of C(sp2) CF3 Bonds in Trifluoromethylpyridines.xlsx  Table 2 Entry 11 Amine Catalyzed CopperMediated CH Sulfonylation of Benzaldehydes.xlsx  Table 2 Entry 12 Cationic Co(I) Catalysts for Regiodivergent Hydroalkenylation of 1,6 Enynes.xlsx  Table 2 Entry 13 Triptycenyl Sulfide catalysed Electrophilic Aromatic Halogenation Using N Halosuccinimides.xlsx  Table 2 Entry 14 - Enantioselective Diels-Alder Reactions of α-Acyloxy Enones.xlsx  Table 2 Entry 15 Palladium-Catalyzed C(sp3)H Arylation of Pyrrolidines and Piperidines at Unactivated C4 Positions.xlsx  Table 2 Entry 16 Stereo and regioselective dimerization of alkynes to enynes by bimetallic syn carbopalladation.xlsx  Table 2 Entry 2 Enantioselective alpha beta Unsaturated Acyl Ammonium Catalysis.xlsx  Table 2 Entry 3 HyperBTM Catalyzed Acylative Kinetic Resolution of Tertiary Heterocyclic Alcohols.xlsx  Table 2 Entry 4 Base free Enantioselective C(1) Ammonium Enolate Catalysis.xlsx  Table 2 Entry 5 Selective oxidation of silanes into silanols with water using [MnBr(CO)5] as a precatalyst.xlsx  Table 2 Entry 6 Mn(II)-Catalyzed Hydroborations Hemilabile SNS Ligand Enables Metal Hydride Free Reaction Pathway.xlsx  Table 2 Entry 7 Gold(I) Catalyzed 1,3 O Transposition of Ynones.xlsx  Table 2 Entry 8 Rh(II) Catalyzed Asymmetric Cyclopropanation with Low Catalyst Loadings (DCM dataset).xlsx  desktop.ini  (+1 more)
auto_vtna_master/: LICENCE.md  README.md  pyproject.toml  run.py  setup.py
auto_vtna_master version 1.1.1/: pyproject.toml  setup.py
auto_vtna_master version 1.1.1/auto_vtna/: Auto_VTNA_GUI.py  Auto_VTNA_GUI_no_sizes.py  Automatic_VTNA.py  Same_Excess.py  __init__.py
auto_vtna_master version 1.1.1/auto_vtna.egg-info/: PKG-INFO  top_level.txt
auto_vtna_master/auto_vtna/: Auto_VTNA_GUI.py  Auto_VTNA_GUI.spec  Automatic_VTNA.py  Normal_VTNA.py  VTNA_functions.py  __init__.py
auto_vtna_master/auto_vtna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+29 files in other folders)
